--- a/style/style.css
+++ b/style/style.css
@@ -138,6 +138,7 @@
     padding: 5px;
     border: 1px solid black;
     border-radius: 5px;
+    color: black;
     
 }
 
@@ -153,4 +154,8 @@
     padding: 5px;
     border: 1px solid black;
     border-radius: 5px;
+}
+
+a{
+    text-decoration: none;
 }
